# stapp-groq-whisper

./: README.md  pyproject.toml
src/components/: language_selector.py  modal_voice_input.py  selector_language.py  sidebar_key_and_model.py
src/functions/: record_audio_file.py  transcribe_audio.py
src/pages/: 11_simple_groq_whisper.py  12_editor_voice_input.py  13_chatbot_with_voiceinput.py  a11_groq_whisper.py
