[tool.poetry]
name = "stapp-groq-whisper"
version = "0.1.0"
description = "Groq APIを使って Whisperアプリを立ち上げてみる"
authors = ["Shogo Ogami <sg.tao.so@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.13.0"
pandas = "^2.2.2"
groq = "^0.9.0"
requests = "^2.32.3"
streamlit = "^1.36.0"
streamlit-audiorec = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
black = "^24.4.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "streamlit run src/main.py"
test = "pytest tests"
test-cov = "pytest tests --cov --cov-branch -svx"
test-repo = "pytest tests --cov --cov-report=html"
format = "black --line-length 79 src"
lint = "flake8 src"
check-format = { cmd = "task format && task lint", help = "black整形とflake8チェックを実行" }
